--- a/package.json
+++ b/package.json
@@ -3,21 +3,29 @@
   "version": "2.0.1",
   "dependencies": {
     "@fortawesome/fontawesome-free": "5.15.2",
+    "@reduxjs/toolkit": "^2.11.0",
+    "@types/leaflet": "^1.9.21",
     "ajv": "^8.16.0",
     "bootstrap": "^4.6.0",
     "chartist": "0.11.4",
+    "formik": "^2.4.9",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.9",
-    "react": ">=16.8.0",
+    "leaflet": "^1.9.4",
+    "react": "^18.3.1",
     "react-bootstrap": "2.4.0",
     "react-chartist": "0.14.4",
-    "react-dom": ">=16.8.0",
+    "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1",
     "react-notification-alert": "0.0.13",
+    "react-redux": "^9.2.0",
     "react-router": "5.2.0",
-    "react-router-dom": "5.2.0",
+    "react-router-dom": "^6.30.2",
     "react-scripts": "5.0.1",
     "reactstrap": "^8.8.1",
-    "sass": "1.53.0"
+    "redux-persist": "^6.0.0",
+    "sass": "1.53.0",
+    "yup": "^1.7.1"
   },
   "optionalDependencies": {
     "jquery": "3.5.1",
@@ -33,10 +41,6 @@
     "minify:scss": "sass src/assets/scss/light-bootstrap-dashboard-pro-react.scss src/assets/css/light-bootstrap-dashboard-pro-react.min.css --style compressed",
     "build:scss": "npm run compile:scss && npm run minify:scss"
   },
-  "peerDependencies": {
-    "react": ">=16.8.0",
-    "react-dom": ">=16.8.0"
-  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -50,6 +54,12 @@
     ]
   },
   "devDependencies": {
-    "cross-env": "^7.0.3"
+    "@types/node": "^24.10.1",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "@types/redux-persist": "^4.0.0",
+    "@types/yup": "^0.29.14",
+    "cross-env": "^7.0.3",
+    "typescript": "^5.9.3"
   }
 }
