se migro completo a vite y tsx

--- a/.env
+++ b/.env
@@ -1,14 +1,4 @@
 GENERATE_SOURCEMAP=false
 
-# Obligatorios para Auth0
-REACT_APP_AUTH0_DOMAIN=dev-3i2nq6fjfyzjm4te.us.auth0.com
-REACT_APP_AUTH0_CLIENT_ID=hdZvQpVgfE5u7oNXI9MmkKfMrBGkG3NW
-# Opcional: si vas a pedir tokens para APIs protegidas (Management API o tu backend)
-REACT_APP_AUTH0_AUDIENCE=https://dev-3i2nq6fjfyzjm4te.us.auth0.com/api/v2/
-REACT_APP_AUTH0_REDIRECT_URI=http://localhost:3000/callback
-
-#API
-EXPO_PUBLIC_API_URL=https://dawnapi.fly.dev/
-
-# En tu archivo .env
-EXPO_PUBLIC_GOOGLE_MAPS_API_KEY=AIzaSyAYvchu8MDpv_jEswo2F_khMH18rDUqxKo
+# API
+VITE_API_URL=https://dawnapi.fly.dev
