--- a/package.json
+++ b/package.json
@@ -1,65 +1,38 @@
 {
   "name": "light-bootstrap-dashboard-react",
-  "version": "2.0.1",
+  "version": "3.0.0",
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "5.15.2",
+    "@fortawesome/fontawesome-free": "^7.1.0",
     "@reduxjs/toolkit": "^2.11.0",
-    "@types/leaflet": "^1.9.21",
-    "ajv": "^8.16.0",
-    "bootstrap": "^4.6.0",
-    "chartist": "0.10.1",
+    "bootstrap": "^5.3.3",
     "formik": "^2.4.9",
-    "gulp": "4.0.2",
-    "gulp-append-prepend": "1.0.9",
     "leaflet": "^1.9.4",
     "react": "^18.3.1",
-    "react-bootstrap": "2.4.0",
-    "react-chartist": "0.14.4",
+    "react-bootstrap": "^2.10.0",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.6.0",
     "react-leaflet": "^4.2.1",
-    "react-notification-alert": "0.0.13",
     "react-redux": "^9.2.0",
-    "react-router": "5.2.0",
     "react-router-dom": "^6.30.2",
-    "react-scripts": "5.0.1",
-    "reactstrap": "^8.8.1",
+    "recharts": "^3.5.0",
     "redux-persist": "^6.0.0",
-    "sass": "1.53.0",
     "yup": "^1.7.1"
   },
-  "optionalDependencies": {
-    "jquery": "3.5.1",
-    "typescript": "4.7.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "cross-env CI=false react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start",
-    "compile:scss": "sass src/assets/scss/light-bootstrap-dashboard-pro-react.scss src/assets/css/light-bootstrap-dashboard-pro-react.css",
-    "minify:scss": "sass src/assets/scss/light-bootstrap-dashboard-pro-react.scss src/assets/css/light-bootstrap-dashboard-pro-react.min.css --style compressed",
-    "build:scss": "npm run compile:scss && npm run minify:scss"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
   "devDependencies": {
-    "@types/node": "^24.10.1",
-    "@types/react": "^19.2.7",
-    "@types/react-dom": "^19.2.3",
-    "@types/redux-persist": "^4.0.0",
-    "@types/yup": "^0.29.14",
-    "cross-env": "^7.0.3",
-    "typescript": "^5.9.3"
+    "@types/leaflet": "^1.9.21",
+    "@types/node": "^20.19.25",
+    "@types/react": "^18.3.0",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "sass": "^1.75.0",
+    "typescript": "^5.9.3",
+    "vite": "^5.2.0"
   }
 }
