--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.30.2",
     "recharts": "^3.5.0",
     "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.8.1",
     "yup": "^1.7.1"
   },
   "devDependencies": {
@@ -30,6 +31,7 @@
     "@types/node": "^20.19.25",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
+    "@types/socket.io-client": "^1.4.36",
     "@vitejs/plugin-react": "^4.2.1",
     "sass": "^1.75.0",
     "typescript": "^5.9.3",
