se agregaron slices para manejar notifiaciones y la cofiguracion del plugin en redux, se agrego conexion con microservicion

--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@ GENERATE_SOURCEMAP=false
 
 # API
 VITE_API_URL=https://dawnapi.fly.dev
+
+# API SSE Microservicio
+VITE_SSE_URL=https://microservicio-notificacionespush-production.up.railway.app
