--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@changey/react-leaflet-markercluster": "^4.0.0-rc1",
     "@fortawesome/fontawesome-free": "^7.1.0",
     "@reduxjs/toolkit": "^2.11.0",
     "bootstrap": "^5.3.3",
@@ -19,7 +20,6 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.6.0",
     "react-leaflet": "^4.2.1",
-    "react-leaflet-cluster": "^4.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.30.2",
     "recharts": "^3.5.0",
