--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "type": "module",
   "scripts": {
+    "prebuild": "ts-node scripts/generate-env.ts",
     "dev": "vite",
-    "build": "VITE_API_URL=$VITE_API_URL VITE_SSE_URL=$VITE_SSE_URL vite build",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
