--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,15 +1,20 @@
 {
-  "short_name": "LBDR",
-  "name": "Light Bootstrap Dashboard React by Creative Tim",
+  "short_name": "Fehura",
+  "name": "Fehura Dashboard",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "src": "fehura_logo.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "fehura_logo.png",
+      "sizes": "512x512",
+      "type": "image/png"
     }
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
+  "theme_color": "#3472F7",
   "background_color": "#ffffff"
 }
